[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player/Player Placeholder.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Attached Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 0.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="WallDetectorOffset" type="Position2D" parent="."]

[node name="WallDetector" type="Area2D" parent="WallDetectorOffset"]
position = Vector2( 0, -7 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetectorOffset/WallDetector"]
modulate = Color( 0.729412, 0.121569, 0.121569, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="WallDetectorOffset"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="WallDetectorOffset/WallDetector" to="." method="_on_WallDetector_body_entered"]
